[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ganger"
version = "0.0.2"
authors = [
  { name="James Poole", email="gipperp@googlemail.com" },
]
description = "Generic job runner handling dependencies"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "alive-progress>3.0",
  "networkx>3.0",
]

[project.urls]
"Homepage" = "https://github.com/jrp55/ganger"
"Bug Tracker" = "https://github.com/jrp55/ganger/issues"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]